--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Ignore all CSV data files
-*.csv
-
-# If your data is in a folder named 'data', ignore the whole folder
+# Ignore the data folder
 data/
+
+# Ignore all CSV files (in case they aren't in a folder)
+*.csv
